# mentedb-grasp

benchmarks/: README.md  pratap_memory_drift.py
benchmarks/fixtures/: pratap_synapse_memory.json
benchmarks/results/: pratap_synapse_memory_drift-20260629-180942.jsonl  pratap_synapse_memory_drift-20260630-121555.jsonl  pratap_synapse_memory_drift-20260701-124245.jsonl
crates/mentedb/: Cargo.toml
crates/mentedb/src/: enrichment.rs  graph_projection.rs  lib.rs  sleep.rs
crates/mentedb/tests/: graph_projection.rs  sleep_maintenance.rs
docs/: FLUTTER_INTEGRATION.md
sdks/flutter/mentedb_flutter/: .gitignore  README.md  pubspec.yaml
sdks/flutter/mentedb_flutter/android/: build.gradle  settings.gradle
sdks/flutter/mentedb_flutter/example/: .metadata  README.md  pubspec.yaml
sdks/flutter/mentedb_flutter/example/integration_test/: native_memory_store_test.dart
sdks/flutter/mentedb_flutter/example/lib/: main.dart
sdks/flutter/mentedb_flutter/example/linux/: CMakeLists.txt
sdks/flutter/mentedb_flutter/example/test/: memory_graph_view_test.dart  memory_prompt_test.dart  openai_compatible_client_test.dart  (+1 more)
sdks/flutter/mentedb_flutter/ios/: mentedb_flutter.podspec
sdks/flutter/mentedb_flutter/lib/: mentedb_flutter.dart
sdks/flutter/mentedb_flutter/linux/: CMakeLists.txt
sdks/flutter/mentedb_flutter/macos/: mentedb_flutter.podspec
sdks/flutter/mentedb_flutter/rust/: Cargo.toml
sdks/flutter/mentedb_flutter/rust/src/: frb_generated.rs
sdks/flutter/mentedb_flutter/rust/src/api/: memory.rs
sdks/flutter/mentedb_flutter/windows/: CMakeLists.txt
(+30 files in other folders)
